packages/tree-sitter-twig/corpus/basic.txt
================================================================================
Output statement
================================================================================

{{ variable }}

--------------------------------------------------------------------------------

(source_file
  (output_statement
    (identifier)))

================================================================================
Statement block
================================================================================

{% if condition %}

--------------------------------------------------------------------------------

(source_file
  (statement_block
    (keyword)
    (identifier)))

================================================================================
Comment
================================================================================

{# This is a comment #}

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Property access
================================================================================

{{ user.name }}

--------------------------------------------------------------------------------

(source_file
  (output_statement
    (identifier)
    (property_access
      (identifier))))

================================================================================
Filter
================================================================================

{{ name|upper }}

--------------------------------------------------------------------------------

(source_file
  (output_statement
    (identifier)
    (filter
      (identifier))))

================================================================================
Whitespace control
================================================================================

{{- trimmed -}}

--------------------------------------------------------------------------------

(source_file
  (output_statement
    (identifier)))

================================================================================
With / endwith block
================================================================================

{% with %}{% endwith %}

--------------------------------------------------------------------------------

(source_file
  (statement_block
    (keyword))
  (statement_block
    (keyword)))
